feat: implement pagination utils
