# models/base.go
@@ -1,7 +1,8 @@
 package models
 
 type BaseResponse[T any] struct {
-	Message string `json:"message"`
-	Data    T      `json:"data"`
-	Errors  []any  `json:"errors"`
+	Message string          `json:"message"`
+	Data    T               `json:"data"`
+	Errors  []any           `json:"errors"`
+	Meta    *PaginationMeta `json:"meta,omitempty"`
 }
